--- a/TODO
+++ b/TODO
@@ -9,7 +9,9 @@ $Id$
 *SEV PF WHO	DESCRIPTION
 *********************************************************************
 9	KB	finish filters dialog
-9	KB	fix filters, don't quite work correctly yet	
+
+9	KB	reference counting problem in filterrule?
+
 9	KB	wxLayout:
 		- delete in empty line
 		- undo
@@ -34,10 +36,6 @@ $Id$
 		I answered no to catchup? Mark undeleted?
 7	KB	crash after changing update times in prefs
 
-5	KB	let all message sorting use the translation table
-
-		Printing multiple messages should only use one config
-		dialog.
 
 	KB	properties/access shows wrong help
 	KB	properties/custom headers/more shows corrupted title
@@ -101,7 +99,6 @@ KB		add python hook for filters
 6	KB	Fix PalmExport: 1. handle illegal characters like '
 				2. use libpisock
 
-3		Add routine to write large headers.
 
 8?		changing password on remote folder while open results
 		in empty folder, but no error message, as login no
@@ -118,14 +115,6 @@ KB		add python hook for filters
 
 	KB	DEBUG:	posting news article --> cannot find mailbox for callback
 
-6	VZ	Adbframe: when creating new entry, the selection
-		should move to that, so it is displayed and can be
-		filled with data immediately. The current behaviour is
-		unintuitive and confusing. 
-
-6	VZ	Adbframe: When listing addressbook types, show native
-		format first.
-
 6	VZ	double click on new folder in treectrl opens not the
 		folder clicked on but the one previously selected
 
@@ -134,24 +123,14 @@ KB		add python hook for filters
 
 6		support for external hooks (programs, not Python scripts)
 
-5	KB	subject in embedded rfc822 messages shows filename
-		instead???
-
 4	KB	Tidy up menus/toolbars.
 
-3		add mf locking to Outbox code
 
 5		intelligent followup/post article when reading
 		NNTP/NEWS groups
 
 4	KB	Also, why "hide" parameter to all wxComposeView::CreateXXX()
 		functions is ignored - is it used anywhere?
-
-7      ?        We need a generic way to re-enable disabled pControls
-
-8	KB	ComposeView/header dialog: remove my old-style
-		mechanism for setting custom headers. Move Vadim's
-		code to SendMessaggeCC. Introduce SendMessage??
 
 7		unknown folder type in config file provokes a crash => should
 		just ignore the folder!
@@ -167,16 +146,43 @@ KB		add python hook for filters
 3		foldername in password prompt seems wrong
 3		URL highlighting in headers is missing (e.g. X-Url)
 ? win	VZ	lock files are sometimes left
-2 win	VZ	keyboard navigation is somewhat strange in the options
-		dialog, can't TAB to the buttons from the notebook
-		page
 2		adb addressbook extension appears twice when new book
 		is created
 5	VZ	custom headers are not inherited
 
 
+------------------ not release critical:
+
+8	KB	ComposeView/header dialog: remove my old-style
+		mechanism for setting custom headers. Move Vadim's
+		code to SendMessaggeCC. Introduce SendMessage??
+
+7      ?        We need a generic way to re-enable disabled pControls
 
 
+5	KB	let all message sorting use the translation table
+
+5	KB	subject in embedded rfc822 messages shows filename
+		instead???
+
+		Printing multiple messages should only use one config
+		dialog.
+
+3		add mf locking to Outbox code
+
+3		Add routine to write large headers.
+
+6	VZ	Adbframe: when creating new entry, the selection
+		should move to that, so it is displayed and can be
+		filled with data immediately. The current behaviour is
+		unintuitive and confusing. 
+
+6	VZ	Adbframe: When listing addressbook types, show native
+		format first.
+
+2 win	VZ	keyboard navigation is somewhat strange in the options
+		dialog, can't TAB to the buttons from the notebook
+		page
 
 6 gtk   RR      The force-reopen checkbox doesn't display its
 		tooltip. Does this work under MSW? A wxGTK bug?
