new mail event problem

--- a/TODO
+++ b/TODO
@@ -8,6 +8,9 @@ $Id$
 *********************************************************************
 *SEV PF WHO	DESCRIPTION
 *********************************************************************
+9	KB	- fix new mail event generation to avoid duplicate
+		  listing of already previously existing new mails
+		   UID for comparison? CheckNewMail() function?
 9	KB	finish filters dialog
 9	KB	wxLayout:
 		- delete in empty line
