--- a/TODO
+++ b/TODO
@@ -8,7 +8,7 @@ $Id$
 *********************************************************************
 *SEV PF WHO	DESCRIPTION
 *********************************************************************
-9	KB	use only one outbox
+9	KB	Outbox : TEST!!!
 9		disabling "collect mail" in properties has no effect!
 9	KB	finish filters dialog
 9	KB	debug filters, does '|' really work?
